# Crystal-Parquet-Database

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
crystpqdb/: __init__.py  db.py  io.py
crystpqdb/io/: __init__.py  base.py  downloaders.py  factory.py
crystpqdb/loaders/: README.md  alexandria.py  base.py  jarvis.py  mc3d.py  mp.py
crystpqdb/utils/: log.py
examples/: Creating-CrystPQDB.ipynb  Creating-CrystPQDB.py
tests/: test_db.py
